feat: Inicializando agendamento service com estrutura básica e configurações
- Add main application class and configuration files
- Implement entity, DTOs, and repository for agendamentos
- Create service and controller for managing agendamentos
- Set up Swagger for API documentation
- Configure security with basic authentication
- Include Maven wrapper and project settings

--- a/agendamento-service/src/main/resources/application.properties
+++ b/agendamento-service/src/main/resources/application.properties
@@ -34,3 +34,8 @@ springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.tryItOutEnabled=true
 springdoc.swagger-ui.defaultModelsExpandDepth=-1
+
+# JWT
+agendify.security.jwt.secret=kec+6=$d5TE*bzrhB3-W,A]}X8t^U&GF
+agendify.security.jwt.expiration=3600000   # 1h em ms
+agendify.security.jwt.refresh=604800000    # 7d em ms
