--- a/agendamento-service/src/main/resources/application.properties
+++ b/agendamento-service/src/main/resources/application.properties
@@ -17,9 +17,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # -----------------------------
-# FLYWAY (desativado por enquanto)
+# FLYWAY
 # -----------------------------
-spring.flyway.enabled=false
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
 
 # -----------------------------
 # SERVER CONFIG
